--- a/Connexion/connexion.html
+++ b/Connexion/connexion.html
@@ -17,8 +17,22 @@
         <select id="Role" name="Role">
             <option value="Directeur">Directeur</option>
             <option value="Secretaire">Secretaire</option>
-            <option value="ChefDeDevision">Chef d'une division</option>
-            <option value="ChefDeService">Chef de service</option>
+            <option value="Chef_de_division_des_affaires_administrative_et_financiers">Chef de division des affaires administrative et financièrs</option>
+            <option value="Chef_de_division_de_domaine_public_hydraulique">Chef de division de domaine public hydraulique</option>
+            <option value="Chef_de_division_de_gestion_durable_des_ressources_en_eau">Chef de division de gestion durable des ressources en eau</option>
+            <option value="Chef_de_division_d_evaluation_et_planification_des_RE">Chef de division d'évaluation et planification des RE</option>
+        
+            <option value="chefDeService(Marches_compabilite)">Chef de service(Marchés et compabilité)</option>
+            <option value="chefDeService(RH_moyens_Generaux)">Chef de service(Ressources humaines et moyens généraux)</option>
+            <option value="chefDeService(service_financement_programmation)">Chef de service(Service financement et programmation)</option>
+            <option value="chefDeService(DPH)">Chef de service(Gestion du DPH)</option>
+            <option value="chefDeService(affaires_juridiques_contentieux)">Chef de service(Des affaires juridiques et contentieux)</option>
+            <option value="chefDeService(Aides_redevances)">Chef de service(Aides et redevances)</option>
+            <option value="chefDeService(Gestion_devlopement_RE)">Chef de service(Gestion et developement des Re)</option>
+            <option value="chefDeService(travaux_amenagements_hydrauliques)">Chef de service(travaux et aménagements hydrauliques)</option>
+            <option value="chefDeService(planification_ressource_eau_etudes)">Chef de service(planification des ressources en eau et etudes)</option>
+            <option value="chefDeService(suivi_eveluation_ressource_eau)">Chef de service(Suivi et évaluation des ressources en eau)</option>
+            
         </select>
         <br>
         <button type="submit" id="Valider">Valider</button>
