--- a/Connexion/connexion.html
+++ b/Connexion/connexion.html
@@ -15,6 +15,7 @@
         <input type="text" name="Mot-De-Passe" required><br><br>
         <label for="Role">Role :</label>
         <select id="Role" name="Role">
+            <option value="admin">Admin</option>
             <option value="Directeur">Directeur</option>
             <option value="Secretaire">Secretaire</option>
             <option value="Chef_de_division_des_affaires_administrative_et_financiers">Chef de division des affaires administrative et financièrs</option>
