fonctioner la modification suppression archivage orientation

--- a/Reclamation_formulaire/reclamation.html
+++ b/Reclamation_formulaire/reclamation.html
@@ -63,6 +63,9 @@
   <br>
   <textarea name="description" id="descriptionInput" required></textarea><br><br>
   <br>
+  <label for="commune-field" id="commune-label">Commune de la réclamation :</label>
+  <input id="commune-field" type="text" name="commune" autocomplete="address-level2">
+  <br>
   <label for="ville-field" id="city-label">Ville de la réclamation :</label>
   <input id="ville-field" type="text" name="ville" autocomplete="address-level2">
   <br><br>
